--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.785",
     "@aws-sdk/client-s3": "^3.817.0",
     "@aws-sdk/credential-providers": "^3.782",
+    "@azure/msal-node": "^3.6.1",
     "@smithy/node-http-handler": "^4.0.4",
     "@smithy/types": "^4.1.0",
     "@types/express": "^5.0.0",
@@ -26,6 +27,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "multer": "^2.0.0",
+    "pdf-parse": "^1.1.1",
     "pnpm": "^10.6.1",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
+    "@types/pdf-parse": "^1.1.5",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.19.3"
   }
